@@ -5,6 +5,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import java.util.Arrays;
 import org.testng.Assert;
 import org.testng.TestNG;
+import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 import org.testng.xml.XmlSuite;
 import test.configuration.issue2726.TestClassSample;
@@ -13,6 +14,8 @@ import test.configuration.sample.ConfigurationTestSample;
 import test.configuration.sample.ExternalConfigurationClassSample;
 import test.configuration.sample.MethodCallOrderTestSample;
 import test.configuration.sample.SuiteTestSample;
+import test.listeners.issue2961.OnlyOnceConfigurationThatFailsTestSample;
+import test.listeners.issue2961.OnlyOnceConfigurationThatPassesTestSample;
 
 /**
  * Test @Configuration
@@ -52,5 +55,21 @@ public class ConfigurationTest extends ConfigurationBaseTest {
     testng.run();
     assertThat(TestClassSample.beforeLogs).hasSize(1);
     assertThat(TestClassSample.afterLogs).hasSize(1);
+  }
+
+  @Test(description = "GITHUB-2961", dataProvider = "produceTestClasses")
+  public void ensureFirstTimeOnlyConfigsHaveProperTestStatuses(Class<?> clazz) {
+    TestNG testng = create(clazz);
+    testng.setVerbose(2);
+    testng.run();
+    assertThat(testng.getStatus()).isZero();
+  }
+
+  @DataProvider(name = "produceTestClasses")
+  public Object[][] produceTestClasses() {
+    return new Object[][] {
+      {OnlyOnceConfigurationThatFailsTestSample.class},
+      {OnlyOnceConfigurationThatPassesTestSample.class}
+    };
   }
 }
